prevent text wrap in "tabs" button

--- a/src/components/TabsRound/tabs-round.module.css
+++ b/src/components/TabsRound/tabs-round.module.css
@@ -31,6 +31,8 @@
     font-weight: 500;
     line-height: 24px; /* 150% */
     letter-spacing: -0.16px;
+
+    white-space: nowrap;
 }
 
 .tab.active {
